<resources>
    <string name="app_name">Scheduler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monthly">Monthly Data</string>
    <string name="yearly">Change Goal</string>
    <string name="scheduler">Scheduler</string>
    <string name="add_data">Add Data</string>
    <string name="password">Password</string>
    <string name="hello_first_fragment">Scheduler</string>
    <string name="exercise">Exercise</string>
    <string name="code">Coding</string>
    <string name="study">Study</string>
    <string name="phone">Screen Time</string>
    <string name="wakeup">Wake Up Time</string>
    <string name="book">Book Pages Read</string>
    <string name="clearButton">Clear All</string>
    <string name="submit">Submit</string>
    <string name="infoHai">*You can enter data one time a day so please add data accordingly</string>
</resources>