<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.scheduler.fragments.InputFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        app:startIconContentDescription="@string/exercise"
        app:startIconDrawable="@drawable/ic_bike">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exerciseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.01999998"
        app:startIconContentDescription="@string/code"
        app:startIconDrawable="@drawable/ic_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
        app:layout_constraintVertical_bias="0.01999998"
        app:startIconContentDescription="@string/study"
        app:startIconDrawable="@drawable/ic_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/studyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/study"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>