<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.scheduler.fragments.HomeFragment">

        <Button
            android:id="@+id/ThemeButton"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/orbitronbold"
            android:padding="15dp"
            android:text="@string/add_data"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_input"
            app:iconSize="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ThemeButton2"
            android:layout_width="370dp"
            android:layout_height="200dp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="@font/orbitronbold"
            android:padding="15dp"
            android:text="@string/yearly"
            android:textColor="#546E7A"
            android:textSize="24sp"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_star"
            app:iconSize="50dp"
            app:iconTint="#546E7A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ThemeButton"
            app:layout_constraintVertical_bias="0.302" />

        <Button
            android:id="@+id/ThemeButton3"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:backgroundTint="#3F5CEF"
            android:fontFamily="@font/orbitronbold"
            android:padding="15dp"
            android:text="@string/monthly"
            android:textSize="15sp"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_month"
            app:iconSize="50dp"
            app:layout_constraintBottom_toTopOf="@+id/ThemeButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toEndOf="@+id/ThemeButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="198dp"
            android:layout_height="204dp"
            android:padding="15dp"
            android:progressTint="#E60707"
            app:layout_constraintBottom_toTopOf="@+id/ThemeButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/progressBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>